# src/main/java/co/edu/uniquindio/dto/PasswordUpdateDTO.java
@@ -1,0 +1,9 @@
+package co.edu.uniquindio.dto;
+
+import lombok.Data;
+
+@Data
+public class PasswordUpdateDTO {
+    private String currentPassword;
+    private String newPassword;
+}
