# src/main/java/co/edu/uniquindio/model/User.java
@@ -1,70 +1,57 @@
-package co.edu.uniquindio.model;
+    package co.edu.uniquindio.model;
 
-import co.edu.uniquindio.enums.Rol;
-import com.fasterxml.jackson.annotation.JsonFormat;
-import jakarta.persistence.Entity;
-import jakarta.persistence.EnumType;
-import jakarta.persistence.Enumerated;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
-import jakarta.validation.constraints.*;
+    import com.fasterxml.jackson.annotation.JsonFormat;
+    import jakarta.persistence.*;
+    import jakarta.validation.constraints.*;
+    import lombok.*;
 
-import java.time.LocalDate;
+    import java.time.LocalDate;
+    import java.util.UUID;
 
-@Entity
-public class User {
+    @Entity
+    @Table(name = "users")
+    @Getter
+    @Setter
+    @NoArgsConstructor
+    @AllArgsConstructor
+    @Builder
+    public class User {
 
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long id;
+        @Id
+        @GeneratedValue(strategy = GenerationType.UUID)
+        private UUID id;
 
-    @NotBlank(message = "El campo no puede estar vacío")
-    private String fullName;
+        @NotBlank(message = "El campo no puede estar vacío")
+        @Column(nullable = false)
+        private String fullName;
 
-    @Email(message = "Debe ser un email válido")
-    @NotBlank(message = "El email no puede estar vacío")
-    private String email;
+        @Email(message = "Debe ser un email válido")
+        @NotBlank(message = "El email no puede estar vacío")
+        @Column(nullable = false, unique = true)
+        private String email;
 
-    @NotBlank(message = "La contraseña no puede estar vacía")
-    @Size(min = 8, message = "La longitud mínima es 8 caracteres")
-    @Pattern(
-            regexp = "^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).*$",
-            message = "La contraseña debe contener al menos un número, una letra minúscula y una letra mayúscula"
-    )
-    private String password;
+        @NotBlank(message = "La contraseña no puede estar vacía")
+        @Size(min = 8, message = "La longitud mínima es 8 caracteres")
+        @Pattern(
+                regexp = "^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).*$",
+                message = "La contraseña debe contener al menos un número, una letra minúscula y una letra mayúscula"
+        )
+        @Column(nullable = false)
+        private String password;
 
-    @NotNull(message = "La fecha de nacimiento no puede ser nula")
-    @Past(message = "La fecha de nacimiento debe estar en el pasado")
-    @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd")
-    private LocalDate dateOfBirth;
+        @NotNull(message = "La fecha de nacimiento no puede ser nula")
+        @Past(message = "La fecha de nacimiento debe estar en el pasado")
+        @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd")
+        @Column(nullable = false)
+        private LocalDate dateOfBirth;
 
-    @NotNull(message = "Debe existir un rol")
-    @Enumerated(EnumType.STRING)
-    private Rol rol;
+        @NotNull(message = "Debe existir un rol")
+        @Enumerated(EnumType.STRING)
+        @Column(nullable = false)
+        private Rol rol;
 
-    public User() {}
+        public enum Rol {
+            USER,ADMIN
+        }
 
-    public User(Long id, String fullName, String email, String password, LocalDate dateOfBirth, Rol rol) {
-        this.id = id;
-        this.fullName = fullName;
-        this.email = email;
-        this.password = password;
-        this.dateOfBirth = dateOfBirth;
-        this.rol = rol;
     }
-
-    // Getters y Setters
-    public Long getId() { return id; }
-    public void setId(Long id) { this.id = id; }
-    public String getFullName() { return fullName; }
-    public void setFullName(String fullName) { this.fullName = fullName; }
-    public String getEmail() { return email; }
-    public void setEmail(String email) { this.email = email; }
-    public String getPassword() { return password; }
-    public void setPassword(String password) { this.password = password; }
-    public LocalDate getDateOfBirth() { return dateOfBirth; }
-    public void setDateOfBirth(LocalDate dateOfBirth) { this.dateOfBirth = dateOfBirth; }
-    public Rol getRol() { return rol; }
-    public void setRol(Rol rol) { this.rol = rol; }
-}
