# src/main/resources/openapi.yaml
@@ -1,401 +1,144 @@
-openapi: 3.0.2
+openapi: 3.1.0
 info:
-  title: API de Pruebas
+  title: API de Usuarios
+  description: API para gestionar usuarios
   version: 1.0.0
+
 servers:
-- url: /
+  - url: http://localhost:8080
+    description: Servidor local
+
 paths:
   /users:
     get:
+      summary: Obtener todos los usuarios
       operationId: getUsers
-      parameters:
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            default: 1
-        - name: size
-          in: query
-          required: false
-          schema:
-            type: integer
-            default: 10
       responses:
-        "200":
+        '200':
+          description: Lista de usuarios obtenida correctamente
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserResponse'
-          description: Lista de usuarios obtenida exitosamente
-        "401":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: No autorizado
-        "403":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Prohibido
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Error interno del servidor
-        "503":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Servicio no disponible
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserResponseDTO'
     post:
+      summary: Registrar un nuevo usuario
       operationId: registerUser
       requestBody:
+        required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserRegistration'
+              $ref: '#/components/schemas/UserRegistrationDTO'
       responses:
-        "201":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
+        '201':
           description: Usuario registrado exitosamente
-        "400":
           content:
             application/json:
               schema:
-                items:
-                  $ref: '#/components/schemas/ErrorResponse'
-                type: array
-          description: Datos de entrada inválidos
-        "409":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Correo ya registrado
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Error interno del servidor
-        "503":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Servicio no disponible
-      summary: Registrar un nuevo usuario
-      x-content-type: application/json
-      x-accepts:
-      - application/json
+                $ref: '#/components/schemas/UserResponseDTO'
 
   /users/{id}:
-    delete:
-      operationId: deleteUser
-      responses:
-        "200":
-          content:
-            applicatio/json:
-              schema:
-                $ref: '#/components/schemas/SuccessResponse'
-          description: Usuario eliminado con exitosamente
-        "401":
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ErrorResponse'
-            description: No autorizado
-        "403":
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ErrorResponse'
-            description: No autorizado
-        "404":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Usuario no encontrado
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Error interno del servidor
-        "503":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Servicio no disponible
     get:
+      summary: Obtener un usuario por ID
       operationId: getUser
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
-        "200":
+        '200':
+          description: Usuario encontrado
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SuccessResponse'
-          description: Usuario encontrado exitosamente
-        "401":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: No autorizado
-        "403":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Prohibido
-        "404":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/UserResponseDTO'
+        '404':
           description: Usuario no encontrado
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description:  Error interno del seervidor
-        "503":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Servicio no disponible
-    put:
-      operationId: updateUser
+    delete:
+      summary: Eliminar un usuario por ID
+      operationId: deleteUser
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SuccessResponse'
-          description: Usuario actualizado exitosamente
-        "400":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Datos de entrada inválidos
-        "401":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: No autorizado
-        "403":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Prohibido
-        "404":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Usuario no encontrado
-        "409":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Conflicto de datos
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Error interno del servidor
-        "503":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Servicio no disponible
+        '200':
+          description: Usuario eliminado correctamente
+
   /users/{id}/password:
     patch:
-      operationId: updateUserPassword
+      summary: Actualizar la contraseña de un usuario
+      operationId: updatePassword
       parameters:
-      - explode: false
-        in: path
-        name: id
-        required: true
-        schema:
-          type: string
-        style: simple
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
+        required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SuccessResponse'
+              $ref: '#/components/schemas/PasswordUpdateDTO'
       responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
+        '200':
           description: Contraseña actualizada exitosamente
-        "400":
           content:
             application/json:
               schema:
-                items:
-                  $ref: '#/components/schemas/ErrorResponse'
-                type: array
-          description: Datos de entrada inválidos
-        "401":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: No autorizado
-        "403":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Prohibido (sin permisos suficientes)
-        "404":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Usuario no encontrado
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Error interno del servidor
-        "503":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-          description: Servicio no disponible
-      security:
-      - BearerAuth: []
-      summary: Actualizar la contraseña de un usuario
-      x-content-type: application/json
-      x-accepts:
-      - application/json
+                $ref: '#/components/schemas/UserResponseDTO'
+        '400':
+          description: Contraseña actual incorrecta
+
 components:
   schemas:
-    UserRegistration:
-      example:
-        password: password
-        fullName: fullName
-        dateBirth: 1990-01-01
-        email: email
-        rol: user
-      properties:
-        email:
-          format: email
-          type: string
-        password:
-          description: "La contraseña del usuario (debe contener al menos un dígito,\
-            \ una mayúscula y una minúscula)"
-          minLength: 8
-          pattern: "^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).*$"
-          type: string
-        fullName:
-          maxLength: 100
-          type: string
-        dateBirth:
-          example: 1990-01-01
-          format: date
-          type: string
-        rol:
-          default: user
-          enum:
-          - user
-          - admin
-          type: string
-      required:
-      - email
-      - fullName
-      - password
+    UserResponseDTO:
       type: object
-    PasswordUpdate:
-      properties:
-        currentPassword:
-          description: Contraseña actual del usuario
-          type: string
-        newPassword:
-          description: "Nueva contraseña del usuario (debe contener al menos un dí\
-            gito, una mayúscula y una minúscula)"
-          minLength: 8
-          pattern: "^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).*$"
-          type: string
-      required:
-      - currentPassword
-      - newPassword
-      type: object
-    SuccessResponse:
-      example:
-        message: Contraseña actualizada exitosamente
-      properties:
-        message:
-          example: Contraseña actualizada exitosamente
-          type: string
-      required:
-      - message
-      type: object
-    UserResponse:
-      example:
-        fullName: fullName
-        id: id
-        dateBirth: 2000-01-23
-        email: email
-        rol: rol
       properties:
         id:
           type: string
+          format: uuid
         email:
           type: string
         fullName:
           type: string
         dateBirth:
-          format: date
           type: string
+          format: date
         rol:
           type: string
-      required:
-      - email
-      - fullName
-      - id
-      - rol
+          enum: [USER, ADMIN]
+
+    UserRegistrationDTO:
       type: object
-    ErrorResponse:
-      example:
-        error: error
-        message: message
+      required: [email, fullName, password, dateBirth, rol]
       properties:
-        error:
+        email:
           type: string
-        message:
+          format: email
+        fullName:
           type: string
-      required:
-      - error
-      - message
+        password:
+          type: string
+        dateBirth:
+          type: string
+          format: date
+        rol:
+          type: string
+          enum: [USER, ADMIN]
+
+    PasswordUpdateDTO:
       type: object
-  securitySchemes:
-    BearerAuth:
-      bearerFormat: JWT
-      scheme: bearer
-      type: http
+      required: [currentPassword, newPassword]
+      properties:
+        currentPassword:
+          type: string
+        newPassword:
+          type: string
